fixed alignment

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -37,7 +37,7 @@
 
 .card {
     max-width: 15rem;
-    margin:1rem
+   
 }
 
 .card-icon {
